--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="partition">
-        <div class="webnav">
+        <div class="webnav"> 
             <div class="webnavfor">
               <a href="index.html">Home</a>
             </div>
@@ -213,6 +213,7 @@
                     Email: <a href="mailto:dharmeshkashyap46@gmail.com">dharmeshkashyap46@gmail.com</a>
                   </address>
               </div>
+              <div class="bottompad">
               <div class="fav">
                 <div class="col-12  col-sm-6 align-self-center">
                   <div class="text-center">
@@ -246,6 +247,7 @@
                   </div>     
               </div>
               </div>
+            </div>
           </div>
           <div class="row justify-content-center">
               <div class="col-auto">
